--- a/assets/styles/layout.styl
+++ b/assets/styles/layout.styl
@@ -27,6 +27,7 @@ section
   max-width tablet-width
 
 .content-column
+  position relative
   float left
   width 65%
   margin-bottom 90px
@@ -45,6 +46,37 @@ section
     float none
     clear both
     overflow hidden
+
+form.star
+  position absolute
+  top 29px
+  left -32px
+  display block
+  margin 10px 0
+  @media only screen and (max-width: maxColumnWidth)
+    left auto
+    top 28px
+    right 0px
+
+  input[type=checkbox]
+    display none
+
+    & + label
+      font-size 16px
+      line-height starHeight
+      vertical-align top
+      color text-color
+      cursor pointer
+      &:before
+        transition transform 0.5s
+        font-size starHeight
+        color greigh5
+        margin-right 5px
+
+    &:checked + label:before
+      color npmred
+      transform rotate(360deg)
+
 
 ul.columnar
   @extend .vanilla-list
